--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,11 @@ dependencies:
   sizer: ^2.0.15
   flutter_svg_provider: ^1.0.3
   country_phone_code_picker: ^0.0.41
-  flutter_svg: ^1.1.1+1
+  flutter_svg: ^1.0.2
   device_preview: ^1.1.0
   flutter_screenutil: ^5.5.3+2
+  smooth_page_indicator: ^1.0.0+2
+
 
 dev_dependencies:
   flutter_test:
@@ -74,7 +76,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/i18n/
     - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -88,12 +89,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Medium
+      fonts:
+        - asset: assets/font/Montserrat-Medium.ttf
+    - family: Regular
+      fonts:
+        - asset: assets/font/Montserrat-Regular.ttf
+    - family: SemiBold
+      fonts:
+        - asset: assets/font/Montserrat-SemiBold.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
