--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,11 @@ dependencies:
   fluttertoast: ^8.0.9
   sizer: ^2.0.15
   flutter_svg_provider: ^1.0.3
-  country_phone_code_picker: ^0.0.41
   flutter_svg: ^1.0.2
   device_preview: ^1.1.0
   flutter_screenutil: ^5.5.3+2
   smooth_page_indicator: ^1.0.0+2
+  intl_phone_number_input: ^0.7.0+2
 
 
 dev_dependencies:
