--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   smooth_page_indicator: ^1.0.0+2
   intl_phone_number_input: ^0.7.0+2
+  bottom_navy_bar: ^6.0.0
 
 
 dev_dependencies:
